# packaging-examples

./: .buildinfo  README.md  example.html  genindex.html  index.html  installation.html  notebook.ipynb  objects.inv  py-modindex.html  search.html  searchindex.js
.github/workflows/: builddocs.yml  test.yml
_sources/: index.rst.txt  installation.md.txt
compiled-packaging/: README.md  pyproject.toml
compiled-packaging/src/: basic_math.cpp
compiled-packaging/tests/: test_example.py
edit-sys-path/: example.py
edit-sys-path/code/: utils.py
simple-packaging/: .gitignore  README.md  pyproject.toml
simple-packaging/docs/source/: conf.py  example.rst
simple-packaging/src/rosen/: example.py
simple-packaging/tests/: test_example.py
